[package]
name = "secure-tcp-gender-changer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
color-eyre = "0.6.2"
rcgen = "0.14.7"
tokio = { version = "1.33.0", features = ["full"] }
tokio-rustls = { version = "0.24.1", features = ["dangerous_configuration"] }
